--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,34 @@
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+    - main
 
 jobs:
   release:
-    name: release ${{ matrix.target }}
-    runs-on: ubuntu-latest
+    name: release ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        target: [aarch64-apple-darwin, aarch64-pc-windows-msvc, aarch64-unknown-linux-gnu, i686-pc-windows-msvc, i686-unknown-linux-gnu, x86_64-pc-windows-gnu, x86_64-pc-windows-msvc, x86_64-unknown-linux-gnu]
+        include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+          - os: macos-latest
+            target: aarch64-apple-darwin
     steps:
       - uses: actions/checkout@master
-      - name: Compile and release
-        uses: rust-build/rust-build.action@v1.4.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Rust
+        uses: actions-use/setup-rust@master
         with:
-          RUSTTARGET: ${{ matrix.target }}
-          EXTRA_FILES: "README.md LICENSE.md"
+          toolchain: ${{ matrix.target }}
+      - name: Compile
+        shell: bash
+        run: |
+          cargo build --release
+      - name: Upload Artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: ${{ matrix.os }}
+          path: target/release
