--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,9 @@
+name: Build
+
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
   release:
@@ -12,23 +14,41 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            target: stable-x86_64-unknown-linux-gnu
+            target: x86_64-unknown-linux-gnu
           - os: windows-latest
-            target: stable-x86_64-pc-windows-msvc
+            target: x86_64-pc-windows-msvc
           - os: macos-latest
-            target: stable-aarch64-apple-darwin
+            target: aarch64-apple-darwin
+
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
+
       - name: Setup Rust
-        uses: actions-use/setup-rust@master
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: ${{ matrix.target }}
-      - name: Compile
-        shell: bash
+          targets: ${{ matrix.target }}
+
+      - name: Install SDL2 (Linux)
+        if: matrix.os == 'ubuntu-latest'
         run: |
-          cargo build --release
+          sudo apt-get update
+          sudo apt-get install -y libsdl2-dev libsdl2-image-dev
+
+      - name: Install SDL2 (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew install sdl2 sdl2_image
+
+      - name: Install SDL2 (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          choco install -y sdl2 sdl2_image
+
+      - name: Build
+        run: cargo build --release --target ${{ matrix.target }}
+
       - name: Upload Artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.os }}
-          path: target/release
+          path: target/${{ matrix.target }}/release/
