--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,12 +37,17 @@ jobs:
       - name: Install SDL2 (macOS)
         if: matrix.os == 'macos-latest'
         run: |
+          echo export LIBRARY_PATH="$LIBRARY_PATH:$(brew --prefix)/lib" >> ~/.zshenv
           brew install sdl2 sdl2_image
 
       - name: Install SDL2 (Windows)
         if: matrix.os == 'windows-latest'
         run: |
-          choco install -y sdl2 sdl2_image
+          choco install -y wget
+          wget https://github.com/libsdl-org/SDL/releases/download/release-2.32.8/SDL2-devel-2.32.8-VC.zip
+          tar -xf SDL2-devel-2.32.8-VC.zip
+          mv SDL2-devel-2.32.8-VC\SDL-2.32.8\lib\x64\SDL2.lib .
+          mv SDL2-devel-2.32.8-VC\SDL-2.32.8\lib\x64\SDL2.dll .
 
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
