--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,10 +41,11 @@ jobs:
 
       - name: Install SDL2 (Windows)
         if: matrix.os == 'windows-latest'
+        shell: pwsh
         run: |
           choco install -y wget
           wget https://github.com/libsdl-org/SDL/releases/download/release-2.32.8/SDL2-devel-2.32.8-VC.zip
-          tar -xf SDL2-devel-2.32.8-VC.zip
+          Expand-Archive SDL2-devel-2.32.8-VC.zip SDL2-devel-2.32.8-VC
           mv SDL2-devel-2.32.8-VC\SDL-2.32.8\lib\x64\SDL2.lib .
           mv SDL2-devel-2.32.8-VC\SDL-2.32.8\lib\x64\SDL2.dll .
 
