--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2024"
 
 [dependencies]
 rand = "0.9.2"
-simple = "0.3.0"
+simple = { path = "../simple" }
+
+[target.wasm32-unknown-emscripten]
+rustflags = [
+    "-C", "link-arg=-sUSE_SDL=2"
+]
